# ohra

./: .gitignore  README.md  docker-compose.yml  env.example  pyproject.toml  pytest.ini
docker/: Dockerfile.backend  Dockerfile.worker
experiments/: README.md
experiments/document2embedding/: pyproject.toml
experiments/query2answer/: pyproject.toml
experiments/sagemaker-embedding-deployment/: Dockerfile
experiments/sagemaker-embedding-deployment/code/: inference.py  requirements.txt  serving.properties
experiments/sagemaker-embedding-deployment/scripts/: build-and-push-image.sh  deploy-endpoint.sh  test-endpoint.sh
experiments/sagemaker-vllm-deployment/: Dockerfile  README.md
experiments/sagemaker-vllm-deployment/scripts/: build-and-push-image.sh  (+3 more)
features/ohra-shared_kernel/: README.md  pyproject.toml
features/ohra-shared_kernel-infra-database-sqla/: pyproject.toml
features/ohra-shared_kernel-infra-fastapi/: pyproject.toml
features/ohra-shared_kernel-infra-fastapi/src/ohra/shared_kernel/infra/fastapi/dtos/request/: pageable.py
features/ohra-shared_kernel-infra-fastapi/src/ohra/shared_kernel/infra/fastapi/dtos/response/: pageable.py
features/ohra-shared_kernel-infra-fastapi/src/ohra/shared_kernel/infra/fastapi/exception_handlers/: base.py
features/ohra-shared_kernel-infra-fastapi/src/ohra/shared_kernel/infra/fastapi/middlewares/: __init__.py  auth.py
features/ohra-shared_kernel-infra-fastapi/src/ohra/shared_kernel/infra/fastapi/utils/: responses.py
features/ohra-shared_kernel-infra-qdrant/: README.md  pyproject.toml
features/ohra-shared_kernel-infra-qdrant/src/ohra/shared_kernel/infra/qdrant/: __init__.py  adapter.py  settings.py
features/ohra-shared_kernel-infra-sagemaker/: README.md  pyproject.toml
features/ohra-shared_kernel-infra-sagemaker/src/ohra/shared_kernel/infra/sagemaker/: __init__.py  embedding_adapter.py  settings.py
projects/ohra-backend/: README.md  alembic.ini  env.example  pyproject.toml  pytest.ini
projects/ohra-backend/scripts/: build.sh  debug_embedding.py
projects/ohra-backend/src/ohra/alembic/migrations/: env.py  script.py.mako  utils.py
projects/ohra-backend/src/ohra/alembic/migrations/versions/: 2025-01-27-0000-7fd464bd7af4-add_external_user_id.py  2025-05-27-1644-f7d9f3e6ac1a-init.py  2025-11-14-0423-445652e385c7-add_timestamp_defaults.py  2025-11-14-0714-46049293d5a8-add_chat_tables.py  2025-11-17-0000-init_schema.py  2025-11-17-0001-seed_admin_user.py
projects/ohra-backend/src/ohra/backend/: container.py  lifespan.py  main.py  settings.py
projects/ohra-backend/src/ohra/backend/auth/: __init__.py  dependencies.py  exceptions.py  middleware.py  use_case.py
projects/ohra-backend/src/ohra/backend/auth/containers/: di.py
projects/ohra-backend/src/ohra/backend/auth/dtos/: request.py  response.py
projects/ohra-backend/src/ohra/backend/auth/entities/: __init__.py  api_key.py  user.py
projects/ohra-backend/src/ohra/backend/auth/models/: __init__.py  api_key_model.py  user_model.py
projects/ohra-backend/src/ohra/backend/auth/rest/: fastapi.py
projects/ohra-backend/src/ohra/backend/endpoint/rest/: fastapi.py
projects/ohra-backend/src/ohra/backend/rag/: exceptions.py
projects/ohra-backend/src/ohra/backend/rag/containers/: di.py
projects/ohra-backend/src/ohra/backend/rag/dtos/: request.py  response.py  schemas.py
projects/ohra-backend/src/ohra/backend/rag/entities/: __init__.py  feedback.py  message.py
projects/ohra-backend/src/ohra/backend/rag/models/: feedback_model.py  message_model.py
projects/ohra-backend/src/ohra/backend/rag/rest/: fastapi.py
projects/ohra-backend/src/ohra/backend/rag/retrieval/: __init__.py
projects/ohra-backend/src/ohra/backend/rag/retrieval/hybrid/: __init__.py  retriever.py  service.py
projects/ohra-backend/src/ohra/backend/rag/retrieval/keyword/: retriever.py
projects/ohra-backend/src/ohra/backend/rag/retrieval/vector/: retriever.py
projects/ohra-backend/src/ohra/backend/rag/service/v1/: __init__.py  pipeline.py  prompt.py  schema.py  settings.py
projects/ohra-backend/src/ohra/backend/rag/use_case/: chat_use_case.py  feedback_use_case.py
projects/ohra-backend/tests/: conftest.py  test_benchmark.py
projects/ohra-backend/tests/backend/: __init__.py  test_authentication.py  test_concurrent_limit.py  test_endpoints.py  test_error_handling.py
projects/ohra-backend/tests/embedding/: __init__.py  test_embedding_quality.py
projects/ohra-backend/tests/evaluation/: __init__.py  test_context.py  test_history.py  test_inference_performance.py  test_search_performance.py  test_stability.py
projects/ohra-backend/tests/llm/: __init__.py  test_response_quality.py
projects/ohra-backend/tests/rag_pipeline/: __init__.py  test_context_processing.py  test_hybrid_search.py  test_token_limits.py
projects/ohra-backend/tests/utils/: api_client.py  test_helpers.py
projects/ohra-backend/tests/vector_store/: __init__.py  test_storage.py
projects/ohra-open-webui/: README.md
projects/ohra-worker-sync/: README.md  pyproject.toml  pytest.ini
projects/ohra-worker-sync/results/: worker_document_sync_confluence_20251118_213505.json  worker_document_sync_confluence_20251118_213655.json  worker_document_sync_confluence_20251118_213836.json  worker_document_sync_confluence_20251118_213910.json  worker_document_sync_confluence_20251118_214631.json  worker_document_sync_confluence_20251118_215153.json  worker_document_sync_confluence_20251118_215901.json
projects/ohra-worker-sync/scripts/: build.sh
projects/ohra-worker-sync/src/ohra/workers/: settings.py
projects/ohra-worker-sync/src/ohra/workers/sync/: __init__.py  main.py  schemas.py
projects/ohra-worker-sync/src/ohra/workers/sync/scripts/: base.py  confluence.py  jira.py
projects/ohra-worker-sync/src/ohra/workers/sync/utils/: load.py  transform.py
projects/ohra-worker-sync/tests/: __init__.py  conftest.py
projects/ohra-worker-sync/tests/utils/: __init__.py  test_helpers.py
projects/ohra-worker-sync/tests/worker/: __init__.py  test_document_sync.py  test_duplicate_handling.py  test_version_management.py
(+28 files in other folders)
